public interface entity {

    //attributes
    int getxCoordinate();
    int getyCoordinate();

    void setxcordinate(int xCoordinate);
    void setycordinate(int yCoordinate);

    String id();

        //constructor con atributos
        public void setCoordinates(int getX, int getY);


    }
