package vacuum;

public interface Cleanable {
    void clean();
}

